[package]
name = "plonky2_rsa_wasm_verify"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plonky2 = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
wasm-bindgen = "0.2"
base64 = "0.21"
plonky2_u32 = { git = "https://github.com/dgulotta/plonky2-u32.git" }
plonky2_rsa = { path = "../plonky2-rsa" }
console_error_panic_hook = "0.1"

[features]
default = []
